--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -28,6 +28,10 @@
     .FooterCopyRightDiv {
       margin: 1rem;
       color: white;
+      // border: 2px solid white;
+      p {
+        color: white;
+      }
       span {
         padding: 0.5rem;
       }
