--- a/src/components/pages/Categories/categories.scss
+++ b/src/components/pages/Categories/categories.scss
@@ -1,5 +1,6 @@
 .Categories {
   width: 100%;
+  padding: 2rem;
   height: 100%;
   background-color: rgba(214, 222, 228, 0.2);
   .CategoriesPageContainer {
