--- a/src/components/CartItems/CartItems.scss
+++ b/src/components/CartItems/CartItems.scss
@@ -49,7 +49,7 @@
           grid-template-rows: auto;
           .productImage {
             width: 20rem;
-            height: 100%;
+            height: 20rem;
             img {
               width: 100%;
               height: 100%;
