--- a/src/components/AccountDropdown/AccountDropDown.scss
+++ b/src/components/AccountDropdown/AccountDropDown.scss
@@ -1,4 +1,8 @@
-i {
-  color: rgb(38, 38, 38);
-  font-size: 2rem;
+.accountDropDown {
+  button {
+    i {
+      color: rgb(38, 38, 38);
+      font-size: 2rem;
+    }
+  }
 }
